logs/dag_id=ETL/run_id=manual__2023-10-22T13:40:09.919300+00:00/task_id=Upload_Data/attempt=1.log
[2023-10-22T13:40:11.121+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ETL.Upload_Data manual__2023-10-22T13:40:09.919300+00:00 [queued]>
[2023-10-22T13:40:11.131+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ETL.Upload_Data manual__2023-10-22T13:40:09.919300+00:00 [queued]>
[2023-10-22T13:40:11.131+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-10-22T13:40:11.147+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): Upload_Data> on 2023-10-22 13:40:09.919300+00:00
[2023-10-22T13:40:11.153+0000] {standard_task_runner.py:57} INFO - Started process 387 to run task
[2023-10-22T13:40:11.156+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'ETL', 'Upload_Data', 'manual__2023-10-22T13:40:09.919300+00:00', '--job-id', '36', '--raw', '--subdir', 'DAGS_FOLDER/first_dags.py', '--cfg-path', '/tmp/tmpur0fxkmd']
[2023-10-22T13:40:11.160+0000] {standard_task_runner.py:85} INFO - Job 36: Subtask Upload_Data
[2023-10-22T13:40:11.217+0000] {task_command.py:416} INFO - Running <TaskInstance: ETL.Upload_Data manual__2023-10-22T13:40:09.919300+00:00 [running]> on host 32031900c769
[2023-10-22T13:40:11.312+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='me' AIRFLOW_CTX_DAG_ID='ETL' AIRFLOW_CTX_TASK_ID='Upload_Data' AIRFLOW_CTX_EXECUTION_DATE='2023-10-22T13:40:09.919300+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-10-22T13:40:09.919300+00:00'
[2023-10-22T13:40:11.313+0000] {sql.py:274} INFO - Executing: 

        \COPY scrap FROM '/opt/***/data_csv/tangerang_transformed.csv' DELIMITER ',' CSV HEADER;

        
[2023-10-22T13:40:11.322+0000] {base.py:73} INFO - Using connection ID 'postgres_docker' for task execution.
[2023-10-22T13:40:11.332+0000] {base.py:73} INFO - Using connection ID 'postgres_docker' for task execution.
[2023-10-22T13:40:11.342+0000] {sql.py:418} INFO - Running statement: 

        \COPY scrap FROM '/opt/***/data_csv/tangerang_transformed.csv' DELIMITER ',' CSV HEADER;

        , parameters: None
[2023-10-22T13:40:11.345+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "\"
LINE 3:         \COPY scrap FROM '/opt/***/data_csv/tangerang_tr...
                ^

[2023-10-22T13:40:11.353+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=ETL, task_id=Upload_Data, execution_date=20231022T134009, start_date=20231022T134011, end_date=20231022T134011
[2023-10-22T13:40:11.366+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 36 for task Upload_Data (syntax error at or near "\"
LINE 3:         \COPY scrap FROM '/opt/***/data_csv/tangerang_tr...
                ^
; 387)
[2023-10-22T13:40:11.409+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-10-22T13:40:11.429+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
